Fix how scrollbar on modals is displayed

--- a/public/stylesheets/favoritesfiltering.css
+++ b/public/stylesheets/favoritesfiltering.css
@@ -1,116 +1,166 @@
 .jumbotron {
-    margin-bottom: 0px;
+  margin-bottom: 0px;
 }
 
 .dropdown {
-    margin: 2px 0px 0px 0px;
+  margin: 2px 0px 0px 0px;
 }
 
 .year_to_filter_by, 
 .genre_to_filter_by,
 .artist_to_filter_by {
-    margin: 0px 2px 0px 2px;
-    padding: 3px 5px 3px 5px !important;
+  margin: 0px 2px 0px 2px;
+  padding: 3px 5px 3px 5px !important;
 }
 
 #year_filter_menu, 
 #genre_filter_menu,
 #artist_filter_menu {
-    padding: 1px 0px 4px 4px;
+  padding: 1px 0px 4px 4px;
 }
 
 #artist_filter_menu {
-    overflow: auto;
-    max-height: 55vh;
+  overflow: auto;
+  max-height: 55vh;
 }
 
 .badge {
-    font-size: .8em;
-    padding: 5px;
+  font-size: .8em;
+  padding: 5px;
 }
 
 #clear_filters_button,
 #share-favorites-button {
-    margin: 2px 0px 0px 0px;
+  margin: 2px 0px 0px 0px;
 }
 
 #copied-message {
-    margin-left: 17px;
-    margin-bottom: 8px;
-    margin-top: -25px;
-    display: none;
+  margin-left: 17px;
+  margin-bottom: 8px;
+  margin-top: -25px;
+  display: none;
 }
 
 @media screen and (min-width: 500px) {
 
-    .button_text {
-        display: inline;
-    }
+  .button_text {
+      display: inline;
+  }
 }
 
 @media screen and (max-width: 500px) {
 
-    .button_text {
-        display: none;
-    }
+  .button_text {
+      display: none;
+  }
 }
 
 #up_arrow {
-    height: 18px;
-    padding: 0px 4px 5px 4px;
+  height: 18px;
+  padding: 0px 4px 5px 4px;
 }
 
 #to_top_button {
-    margin: 0px 0px 0px 3px;
+  margin: 0px 0px 0px 3px;
 }
 
 .to_top_button_container {
-    margin-top: 2px;
+  margin-top: 2px;
 }
 
 #top_10_button {
-    padding: 2px 5px 6px 6px;
+  padding: 2px 5px 6px 6px;
 }
 
 #top_star_full,
 #top_star_empty {
-    height: 18px;
+  height: 18px;
 }
 
 #log_in_message {
-    margin-top: 100px;
-    margin-bottom: 100px;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 #favorites-search-results {
-    display: inline-flex;
-    max-width: 100%;
-    overflow-x: scroll;
-    padding-right: 5px;
+  display: inline-flex;
+  max-width: 100%;
+  padding-right: 5px;
+  overflow-x: hidden;
+  padding-bottom: 11px; /* accomidates size of scroll bar */
+}
+
+#favorites-search-results:hover {
+  overflow-x: scroll;
+  padding-bottom: 0px; /* accomidates size of scroll bar */
 }
 
 .remove-favorite-button {
-    cursor: pointer;
-    margin-left: 235px;
-    margin-top: -8px;
-    background-color: rgba(245, 245, 245, 0.7);
-    display: block;
-    border-radius: 12px;
-    padding-left: 6px;
-    padding-right: 6px;
-    padding-top: 0px;
-    padding-bottom: 1px;
-    font-size: 1em;
-    position: absolute;
-    color: darkslategrey;
+  cursor: pointer;
+  margin-left: 235px;
+  margin-top: -8px;
+  background-color: rgba(245, 245, 245, 0.7);
+  display: block;
+  border-radius: 12px;
+  padding-left: 6px;
+  padding-right: 6px;
+  padding-top: 0px;
+  padding-bottom: 1px;
+  font-size: 1em;
+  position: absolute;
+  color: darkslategrey;
 }
-    .remove-favorite-button:hover {
-        background-color: rgba(245, 245, 245, 0.9);
-        box-shadow: 2px 2px 5px lightgray;
-    }
+  .remove-favorite-button:hover {
+      background-color: rgba(245, 245, 245, 0.9);
+      box-shadow: 2px 2px 5px lightgray;
+  }
 
 @media screen and (max-width: 800px) {
-    .remove-favorite-button {
-        margin-left: 153px;
-    }
+  .remove-favorite-button {
+      margin-left: 153px;
+  }
+}
+
+/* ====== show scrollbar ====== */
+#favorites-search-results::-webkit-scrollbar {
+  -webkit-appearance: none;
+}
+
+#favorites-search-results::-webkit-scrollbar:vertical {
+  width: 11px;
+}
+
+#favorites-search-results::-webkit-scrollbar:horizontal {
+  height: 11px;
+}
+
+#favorites-search-results::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  border: 2px solid white; /* should match background, can't be transparent */
+  background-color: rgba(0, 0, 0, .5);
+}
+
+#favorites-search-results::-webkit-scrollbar-track { 
+  background-color: #fff; 
+  border-radius: 8px; 
+} 
+
+/* adds the arrow to the end of the scroll bar */
+#favorites-search-results::-webkit-scrollbar-button:horizontal:end:increment {
+  display: block;
+  background:
+      linear-gradient(210deg, #fff 40%, rgba(0, 0, 0, 0) 41%),
+      linear-gradient(330deg, #fff 40%, rgba(0, 0, 0, 0) 41%),
+      linear-gradient(90deg, #fff 30%, rgba(0, 0, 0, 0) 31%);
+  background-color: #b6b6b6;
+}
+
+/* adds the arrow to the start of the scroll bar */
+#favorites-search-results::-webkit-scrollbar-button:horizontal:start:decrement {
+  display: block;
+  background:
+      linear-gradient(30deg, #fff 40%, rgba(0, 0, 0, 0) 41%),
+      linear-gradient(150deg, #fff 40%, rgba(0, 0, 0, 0) 41%),
+      linear-gradient(270deg, #fff 30%, rgba(0, 0, 0, 0) 31%);
+  background-color: #b6b6b6;
 }
